--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,43 @@
+parameters:
+    youshido.graphql.helper.class: Youshido\GraphQLBundle\Helper\HelpersContainer
+    youshido.graphql.processor.class: Youshido\GraphQLBundle\GraphQL\Processor
+    youshido.graphql.pre_validator_container.class: Youshido\GraphQLBundle\Validator\PreValidator\PreValidatorsContainer
+
+
 services:
-#    graph_ql.example:
-#        class: Youshido\GraphQLBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+
+    youshido.graphql.processor:
+        class: %youshido.graphql.processor.class%
+        arguments:
+            - @youshido.graphql.helper_container
+            - @youshido.graphql.pre_validator_container
+
+    youshido.graphql.helper_container:
+        class: %youshido.graphql.helper.class%
+
+    youshido.graphql.pre_validator_container:
+        class: %youshido.graphql.pre_validator_container.class%
+
+
+
+
+
+    ################## helpers ##################
+
+    youshido.graphql.fragment_helper:
+        class: Youshido\GraphQLBundle\Helper\FragmentHelper
+        tags:
+            - { name: youshido.graphql.helper }
+
+
+    ################## pre validators ##################
+
+    youshido.graphql.pre_validator.fragment_unique:
+        class: Youshido\GraphQLBundle\Validator\PreValidator\FragmentUniquePreValidator
+        tags:
+            - { name: youshido.graphql.pre_validator }
+
+    youshido.graphql.pre_validator._all_fragment_used:
+        class: Youshido\GraphQLBundle\Validator\PreValidator\AllFragmentUsedPreValidator
+        tags:
+            - { name: youshido.graphql.pre_validator }
