--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
       "Youshido\\GraphQLBundle\\": ""
     }
   },
+  "required": {
+    "youshido/graphql": "master-dev"
+  },
   "require-dev": {
     "phpunit/phpunit": "~4.7"
   }
