--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,6 @@
 parameters:
     youshido.graphql.processor.class: Youshido\GraphQLBundle\Processor\Processor
-    youshido.graphql.validator.class: Youshido\GraphQL\Validator\Validator
+    youshido.graphql.validator.class: Youshido\GraphQL\Validator\ResolveValidator
 
 services:
 
