--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
       "Youshido\\GraphQLBundle\\": ""
     }
   },
+  "require": {
+    "php": ">=5.5",
+    "youshido/graphql": "^0.0.1"
+  },
   "require-dev": {
     "phpunit/phpunit": "~4.7"
   }
