- add ability to add custom headers to response - add ability to log queries

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -10,6 +10,7 @@ services:
         calls:
             - [ setSchema, [@youshido.graphql.schema]]
             - [ setContainer, [@service_container]]
+            - [ setLogger, [%youshido.graphql.logger%] ]
 
 
     youshido.graphql.schema:
