--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,18 @@
 {
   "name": "youshido/graphql-bundle",
-  "description": "Symfony2 GraphQl Bundle",
+  "description": "Symfony GraphQl Bundle",
   "minimum-stability": "stable",
   "license": "proprietary",
   "authors": [
     {
       "name": "Portey Vasil",
       "email": "portey@gmail.com"
+    },
+    {
+      "name": "Alexandr Viniychuk",
+      "email": "a@viniychuk.com"
     }
+
   ],
   "autoload": {
     "psr-4": {
@@ -16,7 +21,7 @@
   },
   "require": {
     "php": ">=5.5",
-    "youshido/graphql": "~0.0.2"
+    "youshido/graphql": "~1.0.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.7"
