--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
   },
   "require": {
     "php": ">=5.5",
-    "youshido/graphql": "~1.1"
+    "youshido/graphql": "~1.2",
   },
   "require-dev": {
     "phpunit/phpunit": "~4.7",
-    "composer/composer": "~1.2"
+    "composer/composer": "~1.2.9.2"
   }
 }
