--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,12 @@
   "description": "Symfony GraphQl Bundle",
   "minimum-stability": "stable",
   "license": "proprietary",
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/Youshido/GraphQL"
+    }
+  ],
   "authors": [
     {
       "name": "Portey Vasil",
@@ -21,7 +27,7 @@
   },
   "require": {
     "php": ">=5.5",
-    "youshido/graphql": "~1.2.9"
+    "youshido/graphql": "dev-master#8f4b0a8e38d0850930f3ddfda446fec57aa3a7bd"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.7",
