--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~4.7",
-    "composer/composer": "~1.2"
+    "composer/composer": "~1.2",
+    "symfony/framework-bundle": "~2.7|~3.0"
   }
 }
