--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     "youshido/graphql": "~1.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.7",
+    "phpunit/phpunit": "*",
     "composer/composer": "~1.2",
-    "symfony/framework-bundle": "~2.7|~3.0"
+    "symfony/framework-bundle": "^5.0.0"
   }
 }
