--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "youshido/graphql-bundle",
+  "name": "bastsys/graphql-bundle",
   "replace": {
     "youshido/graphql-bundle": "1.4.1"
   },
